--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,13 @@
 server:
   error:
     include-stacktrace: on_param
+
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/anime?useSSL=false&createDatabaseIfNotExists=true
+    username: root
+    password:root
+  jpa:
+    hibernate:
+      ddl-auto: update
+
