--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,22 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>springboot2-essentials</name>
 	<description>Curso de Spring Boot do DevDojo</description>
+
 	<properties>
 		<java.version>11</java.version>
 	</properties>
+
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
