--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/anime?useSSL=false&createDatabaseIfNotExists=true
+    url: jdbc:mysql://localhost:3306/anime?useSSL=false&createDatabaseIfNotExist=true&allowPublickeyRetrieval=true
     username: root
-    password:root
+    password: 123456
   jpa:
     hibernate:
       ddl-auto: update
